# cell-segmentation

./: .gitignore  README.md  bal_images.ipynb  coef.ipynb  compare.ipynb  compare.py  count.ipynb  help.txt  labels.ipynb  main.py  odkazy.txt  optuna_watershed_cytoplasm.ipynb  optuna_watershed_nucleus.ipynb  parser.py  prep.ipynb  pyproject.toml  requirements.txt  results.csv  results_svm.csv  watershed.ipynb
.github/workflows/: ruff.yml
Data/: results_cytoplasm.csv  svm_results.csv
Results/Analysis_2022-02-10-12-50-36_00_all_images/img_1.tif/CSV_TXT/: Information.csv  Shape descriptors.csv
Results/Analysis_2022-02-10-12-50-36_00_all_images/img_2.tif/CSV_TXT/: Information.csv  Shape descriptors.csv
Results/Analysis_2022-02-10-12-50-36_00_all_images/img_3.tif/CSV_TXT/: Information.csv  Shape descriptors.csv
Results/Analysis_2022-02-10-12-50-36_00_all_images/img_4.tif/CSV_TXT/: Information.csv  Shape descriptors.csv
Results/Analysis_2022-02-10-12-50-36_00_all_images/img_5.tif/CSV_TXT/: Information.csv  Shape descriptors.csv
Scripts/: analysis_script.py  convert_worker.py  image_worker.py  shape_descriptors.py  visual_worker.py
app/: land.html  main.py  morph_nucleus.py
app/pages/: svm.py  watershed_nucleus.py
cellseg/: __main__.py  parser.py
cellseg/Data/: results_water.csv
cellseg/app/: morph_nucleus.py
cellseg/src/: convert_worker.py  hospital.py  image_worker.py  script.py  shape_descriptors.py  svm.py  visual_worker.py  watershed.py
docs/: index.html
src/: 02_hospital.py  coef_worker.py  comparator.py  convert_worker.py  image_worker.py  old_things.py  script.py  shape_descriptors.py  something.py  visual_worker.py
