[tool.poetry]
name = "cellseg"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mahotas = "^1.4.18"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
pillow = "^10.4.0"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
colorcorrect = "^0.9.1"
loguru = "^0.7.2"
rich = "^13.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cellseg = "cellseg.__main__:main"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
exclude = ["*.ipynb", "__init__.py"]
ignore = [
    "FA102", # future required annotation
    "COM812", # trailing comma
    "ISC001", # single line implicit string concatenation
    "D203", # one-blank-line-before-class
    "B008", # function-call-in-default-argument
    "PLR0913", # too many arguments
    "TD002", # missing todo author
    "TD003", # missing todo link
    "FIX002", # line contains todo
    "DTZ005", # call datetime now without tzinfo
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean-typed positional argument in function definition
    ]