[project]
name = "segmentace-bunek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorcorrect>=0.9.1",
    "ipykernel>=6.29.5",
    "mahotas>=1.4.18",
    "marimo>=0.9.27",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "optuna>=4.1.0",
    "optuna-dashboard>=0.17.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "rich>=13.9.4",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
exclude = ["*.ipynb", "__init__.py"]
ignore = [
    "FA102", # future required annotation
    "COM812", # trailing comma
    "ISC001", # single line implicit string concatenation
    "D203", # one-blank-line-before-class
    "B008", # function-call-in-default-argument
    "PLR0913", # too many arguments
    "TD002", # missing todo author
    "TD003", # missing todo link
    "FIX002", # line contains todo
    "DTZ005", # call datetime now without tzinfo
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean-typed positional argument in function definition
    "FA100", # Add `from __future__ import annotations` to simplify `typing.Optional`
    ]